--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -9,14 +9,14 @@ en:
   #contentDir: content/en
 
 # Uncomment the lines below to configure your website in a second language.
-#zh:
-#  languageCode: zh-Hans
-#  contentDir: content/zh
-#  title: Chinese website title...
-#  params:
-#    description: Site description in Chinese...
-#  menu:
-#    main:
-#      - name: 传
-#        url: '#about'
-#        weight: 1
+zh:
+ languageCode: zh-Hans
+ contentDir: content/zh
+ title: 张一扬 个人网站
+ params:
+   description: Site description in Chinese...
+ menu:
+   main:
+     - name: 张一扬
+       url: '#about'
+       weight: 1
