--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Notes
-    url: '#Notes'
+    url: '#notes'
     weight: 20
   - name: Projects
     url: '#projects'
