--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,7 +13,7 @@ main:
   - name: Projects
     url: '#projects'
     weight: 30
-  - name: Talks
+  - name: Code and Data
     url: '#talks'
     weight: 40
   - name: Publications
